feat: adicionando paginacao nos favoritos
